deploy/services/hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: services
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
    - port: 8080
      targetPort: 8080
